tests/data/egress-mtls/ingress/mergeable-minion-invalid/egress-mtls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egress-mtls-ingress-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-egress-mtls.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egress-mtls-ingress-minion
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/policies: "egress-mtls-policy"
    nginx.org/ssl-services: "secure-app"
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-egress-mtls.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: secure-app
            port:
              number: 8443
